
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nhs_mas"
version = "0.1.0"
description = "LSTM-driven multi-agent load balancing for NHS occupancy"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
    "torch>=2.0"
]

[tool.setuptools]
packages = ["nhs_mas", "nhs_mas.config", "nhs_mas.data", "nhs_mas.models", "nhs_mas.agents", "nhs_mas.simulation", "nhs_mas.utils"]
